Archive2/b0/153001fab2ca53/output
main.cpp: In member function 'void Tile<MapT>::dontCallMe()':
main.cpp:6:9: error: static assertion failed: Told you !
         static_assert(false, "Told you !");
         ^
main.cpp: In function 'int main()':
main.cpp:13:21: warning: unused variable 'boom' [-Wunused-variable]
     Tile<int const> boom;
                     ^
